syntax = "proto3";

option csharp_namespace = "SampleGrpcService.net50.Services.ProtoFirst";

package greet;

message SampleProtoFirstRequest {
  string content = 1;
}

message SampleProtoFirstReply {
  string content = 1;
}

service ProtoFirstGreeter {
  rpc UnaryOperation (SampleProtoFirstRequest) returns (SampleProtoFirstReply);
  rpc ServerStreamingOperation (SampleProtoFirstRequest) returns (stream SampleProtoFirstReply);
  rpc ClientStreamingOperation (stream SampleProtoFirstRequest) returns (SampleProtoFirstReply);
  rpc DuplexStreamingOperation (stream SampleProtoFirstRequest) returns (stream SampleProtoFirstReply);
}
